[package]
name = "html5ever_nif"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]

[lib]
name = "html5ever_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[build-dependencies]
rustler_codegen = { git = "https://github.com/rusterlium/Rustler" }

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler" }
rustler_codegen = { git = "https://github.com/rusterlium/Rustler" }

html5ever = "0.22"
markup5ever = "0.7"

tendril = "0.4"
lazy_static = "1.2"
scoped-pool = "1.0"
